Don't update Canary shortcuts from Dev/Beta/Stable installer.

Before this change, UpdatePerUserShortcutsInLocation() looked for
shortcuts pointing to |install dir|(.*)chrome\.exe and updated them
to point to the chrome.exe of the current installation. Unfortunately,
for a user-level dev/beta/stable installation, |install dir| is
something like "C:\Users\...\Google\Chrome", which means that
"C:\Users\...\Google\Chrome SxS\chrome.exe" is matched.

With this CL, a dev/beta/stable installer will no longer try to update
shortcuts pointing to a Canary installation.

BUG=595374

Review URL: https://codereview.chromium.org/1803383002

Cr-Commit-Position: refs/heads/master@{#381642}

Former-commit-id: a31042286f1978cfed1546b500db62a96fa9e5c6